# shake-dhall

./: CHANGELOG.md  README.md  TODO.md  cabal.project.local  shake-dhall.cabal
src/Development/Shake/: Dhall.hs
src/Dhall/: Dep.hs
test/: Spec.hs
test/data/: expr0.dhall  expr1.dhall  expr2.dhall  foo.conf  regression.dhall
test/data/subdir/: lib.dhall
