name:                shake-dhall
version:             0.1.0.0
synopsis: Dhall dependencies
description: Dependency tracking in Dhall
license:             BSD3
license-file:        LICENSE
author:              Vanessa McHale
maintainer:          vamchale@gmail.com
copyright:           Copyright: (c) 2020 Vanessa McHale
category:            Language, Dhall
build-type:          Simple
extra-doc-files:     README.md
                     CHANGELOG.md
cabal-version:       1.18

library
  hs-source-dirs:      src
  exposed-modules:     Dhall.Dep
  build-depends:       base >= 4.3 && < 5
                    ,  dhall
                    , text
                    , filepath
  default-language:    Haskell2010
  if impl(ghc >= 8.0)
    ghc-options:       -Wincomplete-uni-patterns -Wincomplete-record-updates -Wredundant-constraints -Widentities
  if impl(ghc >= 8.4)
    ghc-options:       -Wmissing-export-lists
  if impl(ghc >= 8.2)
    ghc-options: -Wcpp-undef
  if impl(ghc >= 8.10)
    ghc-options: -Wunused-packages
  ghc-options:         -Wall

source-repository head
  type:     git
  location: https://github.com/vmchale/shake-dhall
